--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  max-width: 320px;
+  width: 320px;
   font-family: "Roboto", "Raleway", sans-serif;
+  margin: 0 auto;
 }
 .container {
   width: 100%;
@@ -55,6 +56,7 @@ body {
 
 .title-hamburger-menu {
   position: relative;
+  margin: 0 auto;
 }
 .title-hamburger-menu-close {
   width: 24px;
@@ -173,7 +175,6 @@ body.menu-open footer {
 }
 .part-one-button {
   border-radius: 4px;
-  /* padding: 16px 32px; */
   width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -218,19 +219,21 @@ body.menu-open footer {
 }
 /* 4 başlıklı bölümün olduğu kod burada bitiyor */
 /* Our Team kısmının olduğu kod burada başlıyor */
-.part-three {
+.part-three-wrapper {
   background: #f4f4fd;
+  max-width: 100%;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.part-three {
   gap: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  max-width: 320px;
-  padding-top: 96px;
-  padding-bottom: 96px;
 }
 .part-three-title {
-  margin-bottom: 40px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
@@ -468,6 +471,7 @@ body.menu-open footer {
   align-items: center;
   display: none;
   max-width: 320px;
+  margin: 0 auto;
 }
 .modal-wrapper {
   position: relative;
