--- a/css/tablet-styles.css
+++ b/css/tablet-styles.css
@@ -5,13 +5,14 @@
   }
   .container {
     width: 100%;
-    margin: 0 auto;
+    max-width: 100;
+    margin: 0;
+    padding: 0;
   }
   .hamburger-menu-icon {
     display: none;
   }
   .title {
-    margin: 0 auto;
     width: 100%;
   }
   .part-one {
