--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,6 @@ body {
   width: 100%;
   max-width: 100%;
 }
-header {
-  width: 100%;
-  max-width: 100%;
-}
-
-.title-hamburger-menu {
-  display: none;
-}
 
 .modal {
   display: none;
@@ -43,6 +35,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   padding-right: 16px;
   padding-left: 16px;
 }
@@ -60,6 +53,10 @@ header {
   letter-spacing: 0.03em;
   color: #2e2f42;
 }
+.nav-menu-box-desktop,
+.adres-menu-box-desktop {
+  display: none;
+}
 .hamburger-menu-icon {
   width: 18px;
   height: 16px;
@@ -70,6 +67,8 @@ header {
   max-width: 100%;
 }
 .title-hamburger-menu {
+  width: 100%;
+  max-width: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -79,9 +78,10 @@ header {
   z-index: 1000;
   overflow-y: auto;
   padding: 24px 16px;
-  display: none;
   transition: transform 0.3s ease-in-out;
   transform: translateX(0); /* açıkken */
+  display: none;
+  overflow-x: hidden;
 }
 
 body:not(.menu-open) .title-hamburger-menu {
@@ -137,6 +137,9 @@ body.menu-open footer {
   color: #2e2f42;
 }
 .nav-menu-list-two {
+  color: #404bbf;
+}
+.nav-menu-list:hover {
   color: #404bbf;
 }
 .adres-menu {
