--- a/css/styles.css
+++ b/css/styles.css
@@ -197,8 +197,7 @@ body.menu-open footer {
 }
 @media (min-resolution: 2x) {
   .part-one {
-    background-image: radial-gradient(rgba(46, 47, 66, 0.7)),
-      url(../image/people-office-2x.jpg);
+    background-image: url(../image/people-office-2x.jpg);
   }
 }
 .part-one-text {
